fix a bug in update task